PBI-1114: MDLIC - Implementing Mockups for Reschedule Appointment Screen - Frontend. Fixes after Peer Test part -2. Squashed commit of the following
commit 1570a7d2 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Tue May 11 2021 21:46:13 GMT+0300 (Eastern European Summer Time) 

    PBI-1114 Prevent selecting weekend.


commit d31b98a3 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Tue May 11 2021 20:46:58 GMT+0300 (Eastern European Summer Time) 

    PBI-1114 Fix Warning: Each child in a list should have a unique "key" prop


commit dd656fd0 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Tue May 11 2021 20:44:03 GMT+0300 (Eastern European Summer Time) 

    PBI-1114 Set start day as the first day of the week with available slots


commit f99c7fca 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Tue May 11 2021 17:51:37 GMT+0300 (Eastern European Summer Time) 

    PBI-1114 Fix date formats, margins, etc.


commit 661d4d25 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Tue May 11 2021 16:31:50 GMT+0300 (Eastern European Summer Time) 

    PBI-1114 Fix border for mobile


commit dbe8e49b 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Tue May 11 2021 16:13:29 GMT+0300 (Eastern European Summer Time) 

    PBI-1114 Add border

--- a/src/pages/external-access/appointment/reschedule/appointment-reschedule.scss
+++ b/src/pages/external-access/appointment/reschedule/appointment-reschedule.scss
@@ -1,4 +1,4 @@
-@media (min-width: 1280px) {
+@media (min-width: 1024px) {
   .reschedule-slot {
     width: 8.5rem;
   }
